Rename some testing-related files and update styles

--- a/test/test.html
+++ b/test/test.html
@@ -5,8 +5,8 @@
 		<style>
 			body {color: #888;}
 			p {margin: 3px;}
-			.true {color: green; font-weight: bold;}
-			.false {color: red; font-weight: bold;}
+			.true {background-color: green; color: white; font-weight: bold; padding: 1px;}
+			.false {background-color: red; color: white; font-weight: bold; padding: 1px;}
 		</style>		
 	</head>
 	<body>
