Added test for debouncing

--- a/test/test.html
+++ b/test/test.html
@@ -23,6 +23,7 @@
 			<p><strong>Test 6</strong>: Save and load Redux state tree containing both <u>regular JavaScript objects</u> and <u>Immutable.js</u> data structures: <span id="test6"></span></p>
 			<p><strong>Test 7</strong>: Clear Redux state tree data saved with the <u>default namespace</u>: <span id="test7"></span></p>
 			<p><strong>Test 8</strong>: Clear Redux state tree data saved with a <u>specific namespace</u>: <span id="test8"></span></p>
+			<p><strong>Test 9</strong>: Save Redux state with <u>debouncing</u>: <span id="test9"></span></p>
 		</div>
 		<script src="test.js"></script>
 	</body>
