--- a/test/test.html
+++ b/test/test.html
@@ -24,6 +24,7 @@
 			<p><strong>Test 7</strong>: Clear Redux state tree data saved with the <u>default namespace</u>: <span id="test7"></span></p>
 			<p><strong>Test 8</strong>: Clear Redux state tree data saved with a <u>specific namespace</u>: <span id="test8"></span></p>
 			<p><strong>Test 9</strong>: Save Redux state with <u>debouncing</u>: <span id="test9"></span></p>
+			<p><strong>Test 10</strong>: Save and load <u>part</u> of Redux state tree under a specified <u>namespace</u> (more than one level down): <span id="test10"></span></p>
 		</div>
 		<script src="test.js"></script>
 	</body>
