--- a/test/test.html
+++ b/test/test.html
@@ -19,10 +19,12 @@
 			<p><strong>Test 2</strong>: Save and load <u>part</u> of Redux state tree: <span id="test2"></span></p>
 			<p><strong>Test 3</strong>: Save and load <u>entire</u> Redux state tree under a specified <u>namespace</u>: <span id="test3"></span></p>
 			<p><strong>Test 4</strong>: Save and load <u>part</u> of Redux state tree under a specified <u>namespace</u>: <span id="test4"></span></p>
-			<p><strong>Test 5</strong>: Clear Redux state tree data saved with the <u>default namespace</u>: <span id="test7"></span></p>
-			<p><strong>Test 6</strong>: Clear Redux state tree data saved with a <u>specific namespace</u>: <span id="test8"></span></p>
-			<p><strong>Test 7</strong>: Save Redux state with <u>debouncing</u>: <span id="test9"></span></p>
-			<p><strong>Test 8</strong>: Save and load specific properties of a <u>part</u> of Redux state tree under a specified <u>namespace</u>: <span id="test10"></span></p>
+			<p><strong>Test 5</strong>: Save and load <u>entire</u> Redux state tree under a specified <u>namespace</u> with a specific <u>namespaceSeparator</u>: <span id="test5"></span></p>
+			<p><strong>Test 6</strong>: Save and load <u>part</u> of Redux state tree under a specified <u>namespace</u> with a specific <u>namespaceSeparator</u>: <span id="test6"></span></p>
+			<p><strong>Test 7</strong>: Clear Redux state tree data saved with the <u>default namespace</u>: <span id="test7"></span></p>
+			<p><strong>Test 8</strong>: Clear Redux state tree data saved with a <u>specific namespace</u>: <span id="test8"></span></p>
+			<p><strong>Test 9</strong>: Save Redux state with <u>debouncing</u>: <span id="test9"></span></p>
+			<p><strong>Test 10</strong>: Save and load specific properties of a <u>part</u> of Redux state tree under a specified <u>namespace</u>: <span id="test10"></span></p>
 		</div>
 		<script src="test.js"></script>
 	</body>
