Add 'ignoreStates' functionality

--- a/test/test.html
+++ b/test/test.html
@@ -25,6 +25,7 @@
 			<p><strong>Test 8</strong>: Clear Redux state tree data saved with a <u>specific namespace</u>: <span id="test8"></span></p>
 			<p><strong>Test 9</strong>: Save Redux state with <u>debouncing</u>: <span id="test9"></span></p>
 			<p><strong>Test 10</strong>: Save and load specific properties of a <u>part</u> of Redux state tree under a specified <u>namespace</u>: <span id="test10"></span></p>
+			<p><strong>Test 11</strong>: Save and load entire Redux state tree except the states we <u>ignore</u>: <span id="test11"></span></p>
 		</div>
 		<script src="test.js"></script>
 	</body>
